--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,26 +28,15 @@ services:
     networks:
       - elastic
 
-  ftp:
-    image: fauria/vsftpd
-    container_name: ftp_server
+  sftp:
+    image: atmoz/sftp
+    container_name: sftp_server
     restart: always
     ports:
-      - "20:20"
-      - "21:21"
-      - "21100-21110:21100-21110"
-    environment:
-      FTP_USER: "admin"
-      FTP_PASS: "securepassword"
-      PASV_ADDRESS: "localhost"  # Update to host IP if needed for external clients
-      PASV_MIN_PORT: 21100
-      PASV_MAX_PORT: 21110
-      LOCAL_UMASK: "022"
-      FILE_OPEN_MODE: "0666"
-      LOCAL_ENABLE: "YES"
-      WRITE_ENABLE: "YES"
+      - "2222:22"
+    command: admin:securepassword:1001
     volumes:
-      - ./data:/home/vsftpd/admin
+      - ./data:/home/admin/upload
     networks:
       - elastic
 
